--- a/styles/error.scss
+++ b/styles/error.scss
@@ -26,7 +26,7 @@ header .error_text_container {
         .btn {
             background: $dark100;
             padding: 1rem 2rem;
-            font-family: $open_sans;
+            font-family: $paragraph_font;
             color: white;
             border-radius: $border_radius;
 
