--- a/styles/contact.scss
+++ b/styles/contact.scss
@@ -90,7 +90,7 @@ main {
                 }
 
                 label {
-                    font-family: $open_sans;
+                    font-family: $paragraph_font;
                     // font-weight: bold;
                     color: $dark100;
 
@@ -107,7 +107,7 @@ main {
                     height: 2.5rem;
                     margin-top: 0.5rem;
                     padding: 0.5rem;
-                    font-family: $open_sans;
+                    font-family: $paragraph_font;
                     font-size: $paragraph;
                     border-radius: $border_radius;
                     background-color: $dark5;
