--- a/styles/global/_global.scss
+++ b/styles/global/_global.scss
@@ -19,8 +19,8 @@ $dark10: #0c171c1a;
 $dark5: #0c171c0d;
 
 //? FONTS
-$open_sans: "Open Sans", sans-serif;
-$playfair_display: "Playfair Display", serif;
+$paragraph_font: "Open Sans", sans-serif;
+$heading_font: "Playfair Display", serif;
 
 // 1rem = 16px
 //? FONTS SIZES DESKTOP
@@ -31,6 +31,12 @@ $heading_4: 2.369rem;
 $heading_5: 1.777rem;
 $heading_6: 1.333rem;
 $paragraph: 1rem;
+
+//? FONT WEIGHT
+$normal: 400;
+$medium: 500;
+$semi_bold: 600;
+$bold: 700;
 
 //? BORDER RADIUS
 $border_radius: 1rem;
@@ -56,12 +62,12 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: "Playfair Display", serif;
+    font-family: $heading_font;
 }
 
 //? PARAGRAPH STYLING
 p {
-    font-family: $open_sans;
+    font-family: $paragraph_font;
     font-size: $paragraph;
 }
 
@@ -106,7 +112,7 @@ p {
                 background-color: $dark75;
                 color: $color_white;
                 border: 2px solid $color_white;
-                font-family: $open_sans;
+                font-family: $paragraph_font;
                 border-radius: 10rem;
             }
         }
@@ -118,11 +124,11 @@ p {
     background-color: $background_color;
     padding: 0.6rem 2rem;
     border-radius: 10rem;
-    font-family: $open_sans;
+    font-family: $paragraph_font;
     text-transform: uppercase;
     font-size: 14px;
     color: $text_color;
-    font-weight: bold;
+    font-weight: 500;
     transition: all 0.2s ease-in-out;
     border: 1px solid $background_color;
 
